rnsc/test_data/integration/error/parser/type_hints/float/overflow.rns
.class @float 9999999999999999999999999999999999999999
.super java/lang/Object
